# metal-warrior-x

./: .gitignore  Cargo.toml  README.md
assets/blend/: player.blend
assets/gltf/: player.gltf
assets/spritesheets/: Cargo.toml
assets/spritesheets/src/: main.rs
